# XmasHack2023

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  models.dvc  pyproject.toml  test_trash_file.txt
.dvc/: config
backend/nvidia-triton/: Dockerfile  client.py  docker-compose.yaml  img_proc.py  test.dvc  triton_infer.py
backend/nvidia-triton/model_repository/onnx-mnist/: .gitignore  1.dvc  config.pbtxt
backend/nvidia-triton/model_repository/python-unet/: config.pbtxt
backend/nvidia-triton/model_repository/python-unet/1/: model.py
backend/nvidia-triton/tests/: test.jpg.dvc
frontend/: app.py  index.html
frontend/assets/css/: main.css
frontend/assets/sass/libs/: _vendor.scss
frontend/static/assets/css/: main.css
frontend/static/assets/js/: main.js
frontend/static/assets/sass/components/: _icons.scss
frontend/static/assets/sass/libs/: _breakpoints.scss
frontend/templates/: index.html
