[tool.poetry]
name = "xmashack2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = {extras = ["gdrive"], version = "^3.36.0"}
tritonclient = {extras = ["all"], version = "^2.41.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
